# RunGuard

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  go.work  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
infra/: kind-config.yaml
infra/k8s/: configmap.yaml  namespace.yaml
infra/terraform/: dynamodb.tf  iam.tf  outputs.tf  variables.tf
runbooks/: image-pull-failure.md  pod-crashloop.md  readiness-probe-failure.md
runguard/: __init__.py
runguard/aws/: __init__.py  dynamodb_store.py  eventbridge.py  lambda_handler.py  ssm_executor.py
runguard/backend/: __init__.py  config.py  main.py
runguard/cost/: __init__.py  models.py  tracker.py
runguard/gitops/: __init__.py  models.py  reconciler.py
runguard/mcp/: __init__.py  models.py  server.py  tools.py
runguard/ui/: __init__.py  app.py  components.py  pages.py
scripts/: lint-go.ps1  lint-go.sh
services/api-gateway/: Dockerfile  go.mod  go.sum
services/backend/: Dockerfile  go.mod
services/operator/: Dockerfile  go.mod
services/reasoner/: Dockerfile  pyproject.toml
services/worker/: go.mod
shared/types/: go.mod  incident.go  policy.go  runbook.go  types_test.go
specs/: phase5-plan.md  requirements.md  runguard-spec-en.md  runguard-spec-vi.md  runguard-spec.md
tests/: test_config.py  test_integration.py  test_models_validation.py  test_phase5_integration.py
tests/ai/: test_prompts.py  test_reasoner.py
tests/api/: test_analyze.py  test_api_edge_cases.py  test_execute.py  test_execute_notifications.py  test_incidents.py  test_runbooks.py  test_webhooks.py  test_workflow.py
tests/audit/: test_store.py  test_store_edge_cases.py
tests/aws/: test_dynamodb.py  test_eventbridge.py  test_ssm.py
tests/cost/: test_tracker.py
(+154 files in other folders)
