[project]
name = "runguard"
version = "0.1.0"
description = "AI-powered DevOps/SRE incident remediation platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.0",
    "kubernetes>=35.0.0",
    "anthropic>=0.100.0",
    "httpx==0.27.2",
    "httpcore>=1.0.0",
    "streamlit>=1.57.0",
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "respx>=0.21.0",
    "mypy>=1.10.0",
    "ruff>=0.5.0",
    "moto[dynamodb]>=5.0",
]

[tool.setuptools.packages.find]
include = ["runguard*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["D", "ANN"]

[tool.mypy]
strict = true
ignore_missing_imports = true
